Attempt header fix on safari

--- a/client/src/assets/global-styles/App.scss
+++ b/client/src/assets/global-styles/App.scss
@@ -93,3 +93,8 @@ p {
 .input {
   border-width: 2px;
 }
+
+.no-scroll {
+  max-height: 100dvh;
+  overflow: hidden;
+}
